# TempFiles

./: CMakeLists.txt  ConvertComment  Makefile  README  README.md  buffer.c  buffer.h  bufferFilter.c  bufferFilter.h  error.h  fileSource.c  fileSource.h  fileSystemSink.c  fileSystemSink.h  filter.c  filter.h  filterTest.c  iostack.pc  iostackConfig.cmake  meson.build  passThrough.c  request.h
common/: buffer.c  buffer.h  error.h  filter.c  filter.h  passThrough.c  passThrough.h  request.h  syscall.c  syscall.h
compress/: lz4Compress.c  lz4Compress.h  lz4Decompress.c  lz4Decompress.h
compress/lz4/: lz4.c  lz4.h  lz4Compress.c  lz4Compress.h  lz4Decompress.c  lz4Decompress.h  lz4_internal.h
doc/: diagram.puml  todo.txt
file/: bufferFilter.c  bufferFilter.h  bufferStream.c  fileSource.c  fileSource.h  fileSystemSink.c  fileSystemSink.h
fileSet/: fileSet.c  fileSet.h
filter/: buffer.c  buffer.h  bufferFilter.c  fileSource.c  fileSystemSink.c  filter.h  filterTest.c  passThrough.c  passThrough.h  request.c  request.h
macos/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  aeadTest  bufferedTest  cmake_install.cmake  fileSplitTest  install_manifest.txt  kitchenSinkTest  lz4Test  rawTest
src/: iostack.h  iostack_error.h  iostack_internal.h  xx
src/common/: buffer.c  buffer.h  conversionFilter.c  conversionFilter.h  convertFilter.c  convertFilter.h  converter.h  debug.h  error.h  filter.c  filter.h  getput.h  packed.h  passThrough.c  passThrough.h  pipeline.c  pipeline.h  stage.c  stage.h  syscall.c  syscall.h
src/compress/lz4/: lz4.c  lz4.h  lz4Compress.c  lz4Decompress.c  lz4_internal.h
src/compress/oldLzr/: lz4.c  lz4.h  lz4Compress.c  lz4Decompress.c  lz4_internal.h
src/encrypt/aead/: aead.c  aead.h
src/encrypt/libcrypto/: aead.c  aead.h
src/encrypt/openSSL/: digest.c  digest.h  encrypt.c  encrypt.h  openSSL.c  openSSL.h
src/file/: OldBufferSeek.c  blockify.c  blockify.h  bufferSeek.c  bufferSeek.h  bufferStream.c  bufferStream.h  buffered.c  buffered.h  byteStream.c  byteStream.h  fileSource.c  fileSource.h  fileSystemBottom.c  fileSystemBottom.h  fileSystemSink.c  fileSystemSink.h  ioStack.c  ioStack.h
src/fileSplit/: fileSplit.c  fileSplit.h
src/filters/: aead.c  buffered.c  fileSystemBottom.c  lz4.c
src/framework/: debug.h  iostack.c  packed.h
test/: aeadSeekTest.c  aeadTest.c  blockifyTest.c  bufferTest.c  bufferedTest.c  byteStreamTest.c  encryptionTest.c  fileSplitTest.c  filterTest.c  kitchenSinkTest.c  lz4Test.c  rawSeekTest.c  rawTest.c  seekTest.c  unitTest.h
test/framework/: fileFramework.c  fileFramework.h  seekFramework.c  seekFramework.h  streamFramework.c  streamFramework.h  streamTest.c  streamTest.h  unitTest.h  unitTestInternal.h
